5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1637_2447.log
== TEST (2019-04-07 13:30:05) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	print("Falta ", x)
else: 
	y = pag - preco
	print("Troco de y")
	
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:30:40) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	print("Falta ", x)
else: 
	y = pag - preco
	print("Troco de ", y)
	
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:31:26) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	print("Falta ", x)
else: 
	y = pag - preco
	print(round("Troco de " y, 2)
	
-- ERROR:
File "XXXX", line 8
    print(round("Troco de " y, 2)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:31:33) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	print("Falta ", x)
else: 
	y = pag - preco
	print(round("Troco de ", y, 2)
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:31:40) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	print("Falta ", x)
else: 
	y = pag - preco
	print(round("Troco de ", y, 2))
	
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:32:00) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	print("Falta ", x)
else: 
	y = pag - preco
	print(round("Troco de " y, 2))
	
-- ERROR:
File "XXXX", line 8
    print(round("Troco de " y, 2))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:34:04) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	total = "Falta", x
else: 
	y = pag - preco
	total = "Troco de", y
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:36:04) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	total = "Falta", x
else: 
	y = pag - preco
	total = "Troco de", y
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:36:39) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	total = "Falta " + x
else: 
	y = pag - preco
	total = "Troco de " + y
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = "Falta " + x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:37:24) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	total = "Falta ", x
else: 
	y = pag - preco
	total = "Troco de ", y
print(round(total, 2)
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:37:28) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco>pag):
	x = preco - pag
	total = "Falta ", x
else: 
	y = pag - preco
	total = "Troco de ", y
print(round(total, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(total, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:20:32) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	total = "Falta ", x
else: 
	y = pag - preco
	total = "Troco de ", y
fim = round(total, 2)
print(fim)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    fim = round(total, 2)
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:22:23) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = "Falta ", x
else: 
	y = pag - preco
	round(y, 2)
	total = "Troco de ", y
print(total)
	
-- OUTPUT:
('Falta ', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:22:55) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = ("Falta ", x)
else: 
	y = pag - preco
	round(y, 2)
	total = ("Troco de ", y)
print(total)
	
-- OUTPUT:
('Falta ', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:23:30) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = ("Falta", x)
else: 
	y = pag - preco
	round(y, 2)
	total = ("Troco de", y)
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:35) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = "Falta", x
else: 
	y = pag - preco
	round(y, 2)
	total = 'Troco de', y
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:45) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = "Falta", x
else: 
	y = pag - preco
	round(y, 2)
	total = 'Troco de', y
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:58) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = "Falta", x
else: 
	y = pag - preco
	round(y, 2)
	total = 'Troco de',y
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:36:58) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	total = "Falta",x,
else: 
	y = pag - preco
	round(y, 2)
	total = "Troco de",y,
print(total)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:37:56) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	print("Falta",x,)
else: 
	y = pag - preco
	round(y, 2)
	print("Troco de",y,)

	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:38:33) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	print("Falta",x,)
else: 
	y = pag - preco
	round(y, 2)
	print("Troco de",y,)

	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:38:42) 
-- CODE:
preco = float(input("Digite o preco: "))
pag = float(input("Informe o pagamento: "))
if(preco > pag):
	x = preco - pag
	round(x, 2)
	print("Falta",x,)
else: 
	y = pag - preco
	round(y, 2)
	print("Troco de",y,)

	
-- EXECUTION TIME:
0.14487
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
